# cdpSamples

./: .gitattributes  .gitignore  README.md
ConvertHtmlModule/: CMakeLists.txt  ConvertHtmlModule.cpp  ConvertHtmlModule.h  ConvertHtmlModule.py  README.md  hdv.conf  main.cpp  package_with_debug.sh  stdafx.h
ConvertHtmlModule/chrome/chrome-headless-shell-linux64/: LICENSE.headless_shell  headless_lib_data.pak  headless_lib_strings.pak  libvulkan.so.1
ConvertHtmlModule/chrome/chrome-headless-shell-win32/: LICENSE.headless_shell  headless_lib_data.pak  headless_lib_strings.pak
ConvertHtmlModule/cmake/: cpack_post_build.cmake  install_debug_info.cmake  package_with_debug.sh.in
ConvertHtmlModule/samples/: sample.html  sample_en-US.html  sample_ko-KR.html  sample_ko-KR_style.css
ConvertHtmlModule/samples/docsconverter_result/: api.txt  screenshot_message.txt
c++/: CMakeLists.txt  PipeConnection.sln  PipeConnection.vcxproj  PipeConnection.vcxproj.filters  mainPipeConnection.cpp  mainPipeConnectionLinux.cpp  mainPipeConnectionWindow.cpp  mainPipeConnection_.cpp  temp.txt
c++/.cache/clangd/index/: mainPipeConnectionLinux.cpp.7FD80023649044DF.idx
cdp-pipe/: CMakeLists.txt  main.cpp  main.cpp_
cdp-port/: CMakeLists.txt  NoDepMain.cpp  cdp-port.md  chrome-headless-port.sh  main.cpp
cdp-port/c++/: CMakeLists.txt  NoDepMain.cpp  _NoDepMain.cpp  boost-beast.cpp  main.cpp_  mainCUrl.cpp  mainLibWebSockets.cpp
cdp-port/c++/common/: cdp_port_util.h
cdp-port/node/: app01.js  app02.js  package-lock.json
cdp-port/python/: cdp-port.py  playwright_screenshot.py
node/: ConvertHtmlModule.js  cdp-node.md  cdp_pipe_connection.js  main.js  mainPipeConnection.js  package-lock.json  package.json  playwright_pdf.js  playwright_screenshot.js
python/: _screenshot-websocket.py  cdp_common.py  cdp_pipe_connection.py  cdp_pipe_screenshot.py  cdp_websocket_pdf.py  cdp_websocket_screenshot.py  playwright_pdf_screenshot.py  screenshot-pipe.py  screenshot-pipe.sh  screenshot-websocket.py  test_cdp_pipe.py  test_cdp_pipe.sh
tmp/: CMakeLists.txt  mainPipeConnection__.cpp  mainPipeConnection___.cpp
tmp/cdp-pipe/: main.cpp__  main.cpp___
tmp/cdp-port/c++/: libwebsockets.cpp  mainBoostBeast.cpp  mainLibWebSockets.cpp  mainSocket.cpp
tmp/cdp-port/node/: package.json
참고/: ChromeDevToolsProtocol.cpp
